# vish

./: LICENSE  README.md  meson.build
src/: builtin.cpp  builtin.hpp  executor.cpp  executor.hpp  main.cpp  prompt.cpp  prompt.hpp
